Jun 16, 2021
  rn7.2: added generation and loading of disease/gene-drug tracks
  vervet: chlSab2 assembly: added generation and loading of gene/disease/gene-drug tracks
  molerat: hetGla2 assembly: added generation and loading of gene/disease/gene-drug tracks

Jun 15, 2021
  improved species handling

Jun 11, 2021
  added gff3 qtl extractor and JBrowse track loader for mouse assembly GRCm39

May 18, 2021
  agr extractor: date_produced field aligned with DQM requirements
  damaging variants: fixed sql and code to work with new variant table structure

Apr 29, 2021
  rat strains: added code to generate gff3 files and tracks for mutant and congenic strains on assembly 7.2
  rat qtls: added code to generate gff3 files and tracks for qtls on assembly 7.2

Apr 26, 2021
  rat markers: added export for assembly mRatBN7.2

Jan 28, 2021
  added NcbiPrep tool: to prepare NCBI fasta files for loading into JBrowse
  rat genes: added export for assembly mRatBN7.2

Jan 19, 2021
  genes: removed code referencing UniGene IDs (UniGene IDs removed from RGD database)

Dec 4, 2020
  JBrowse tracks: added gene tracks for GRCm39 assembly

Nov 06, 2020
  genes: added export of GRCm39 assembly

Sep 18, 2020
  qtls: code refactor (1st step for parallelization)

Sep 16, 2020
  bonobo genes: added export for new reference assembly 'Mhudiblu_PPA_v0'

Sep 04, 2020
  agr: fixed export of CDS

Aug 28, 2020
  agr: added export of Ensembl data and additional attributes protein_id, transcript_id

Aug 21-25
  ensembl: added ensembl gff3 assemblies to be downloaded and then uploaded to Jbrowse

Jul 08, 2020
  agr genes: added export of genes with multiple loci

Apr 6, 2020
  genes: tuned up logging: debug messages no longer go to main summary; they go to detail log instead
  genes: fixed generation of unique ids

Mar 30, 2020
  agr genes: added handling of gene type 'biological-region'

Mar 09, 2020
  protein domains: improved logging of exceptions