@@ -1,3 +1,6 @@
+Jun 17, 2021
+  improved code for handling species
+
 Jun 16, 2021
   rn7.2: added generation and loading of disease/gene-drug tracks
   vervet: chlSab2 assembly: added generation and loading of gene/disease/gene-drug tracks
